versions/0.8.0/_sources/refs/_aws-cdk_aws-servicecatalog.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"YivZi/SEbhfGuMzCMeOgz/vRahgIVU8pxv2dWlFYrAo="}

@aws-cdk/aws-servicecatalog
===========================

.. mdinclude:: ./__aws-cdk_aws-servicecatalog.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-servicecatalog

CloudFormationProductProductName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProductName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProductProvisioningArtifactIds
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactIds([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProductProvisioningArtifactNames
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactNames([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProvisionedProductCloudformationStackArn
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductCloudformationStackArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProvisionedProductRecordId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductRecordId([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

PortfolioName
^^^^^^^^^^^^^

.. py:class:: PortfolioName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-servicecatalog.cloudformation

AcceptedPortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AcceptedPortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AcceptedPortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.AcceptedPortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


AcceptedPortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResourceProps



   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


CloudFormationProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProductProductName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProductName` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactIds

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactIds` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactNames

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactNames` *(readonly)*

   .. py:class:: ProvisioningArtifactPropertiesProperty



      .. py:attribute:: description

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: info

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Info``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-info


         :type: json or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



CloudFormationProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResourceProps



   .. py:attribute:: cloudFormationProductName

      ``AWS::ServiceCatalog::CloudFormationProduct.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: owner

      ``AWS::ServiceCatalog::CloudFormationProduct.Owner``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-owner


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: provisioningArtifactParameters

      ``AWS::ServiceCatalog::CloudFormationProduct.ProvisioningArtifactParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactparameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::CloudFormationProduct.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: distributor

      ``AWS::ServiceCatalog::CloudFormationProduct.Distributor``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-distributor


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportDescription

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportdescription


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportEmail

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportEmail``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportemail


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportUrl

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportUrl``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supporturl


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


CloudFormationProvisionedProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProvisionedProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProvisionedProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProvisionedProductCloudformationStackArn

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductCloudformationStackArn` *(readonly)*


   .. py:attribute:: cloudFormationProvisionedProductRecordId

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductRecordId` *(readonly)*

   .. py:class:: ProvisioningParameterProperty



      .. py:attribute:: key

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



CloudFormationProvisionedProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResourceProps



   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: pathId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.PathId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-pathid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: productName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisionedProductName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisionedProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisionedproductname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningArtifactId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningArtifactName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningParameters

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


LaunchNotificationConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchNotificationConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchNotificationConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchNotificationConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchNotificationConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResourceProps



   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


LaunchRoleConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchRoleConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchRoleConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchRoleConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchRoleConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResourceProps



   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleArn

      ``AWS::ServiceCatalog::LaunchRoleConstraint.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchRoleConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchRoleConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


LaunchTemplateConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchTemplateConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchTemplateConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchTemplateConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchTemplateConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResourceProps



   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rules

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-rules


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioPrincipalAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioPrincipalAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioPrincipalAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioPrincipalAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioPrincipalAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResourceProps



   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: principalArn

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principalarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: principalType

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principaltype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioProductAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioProductAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioProductAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioProductAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioProductAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResourceProps



   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioProductAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sourcePortfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.SourcePortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-sourceportfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioResource
~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: portfolioName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioName` *(readonly)*


PortfolioResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResourceProps



   .. py:attribute:: displayName

      ``AWS::ServiceCatalog::Portfolio.DisplayName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-displayname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: providerName

      ``AWS::ServiceCatalog::Portfolio.ProviderName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-providername


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::Portfolio.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::Portfolio.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::Portfolio.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


PortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResourceProps



   .. py:attribute:: accountId

      ``AWS::ServiceCatalog::PortfolioShare.AccountId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-accountid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


TagOptionAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


TagOptionAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResourceProps



   .. py:attribute:: resourceId

      ``AWS::ServiceCatalog::TagOptionAssociation.ResourceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-resourceid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tagOptionId

      ``AWS::ServiceCatalog::TagOptionAssociation.TagOptionId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-tagoptionid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


TagOptionResource
~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


TagOptionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResourceProps



   .. py:attribute:: key

      ``AWS::ServiceCatalog::TagOption.Key``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-key


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: value

      ``AWS::ServiceCatalog::TagOption.Value``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-value


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: active

      ``AWS::ServiceCatalog::TagOption.Active``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-active


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-servicecatalog

